feat(checks,fixes): Add ReorderWebCapturesCheck and Fix